force-app/main/default/objects/AVA_MAPPER__AvaTax_Log__c/AVA_MAPPER__AvaTax_Log__c.object-meta.xml
<CustomObject>
    <label>AvaTax Log</label>
    <nameField>
        <displayFormat>AvaTaxLog-{0000000}</displayFormat>
        <label>AvaTax Logging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AvaTax Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>