force-app/main/default/objects/AVA_MAPPER__AvaTax_Log__c/fields/AVA_MAPPER__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>AVA_MAPPER__Class_Name__c</fullName>
    <description>The name of the invoked class inside the Avalara-managed package</description>
    <inlineHelpText>The name of the invoked class inside the Avalara-managed package</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>