force-app/main/default/objects/AVA_MAPPER__AvaTax_Log__c/fields/AVA_MAPPER__Line_Number__c.field-meta.xml
<CustomField>
    <fullName>AVA_MAPPER__Line_Number__c</fullName>
    <description>The package source code line number being executed</description>
    <inlineHelpText>The package source code line number being executed</inlineHelpText>
    <label>Line Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>