force-app/main/default/objects/AVA_MAPPER__AvaTax_Log__c/fields/AVA_MAPPER__Log_Type__c.field-meta.xml
<CustomField>
    <fullName>AVA_MAPPER__Log_Type__c</fullName>
    <description>Indicates the AvaTax services and exception type logged</description>
    <inlineHelpText>Indicates the AvaTax services and exception type logged</inlineHelpText>
    <label>Log Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>