force-app/main/default/objects/AVA_MAPPER__AvaTax_Log__c/fields/AVA_MAPPER__Method_Name__c.field-meta.xml
<CustomField>
    <fullName>AVA_MAPPER__Method_Name__c</fullName>
    <description>The function or method is called during the action being executed</description>
    <inlineHelpText>The function or method is called during the action being executed</inlineHelpText>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>