force-app/main/default/objects/AVA_MAPPER__AvaTax_Log__c/fields/AVA_MAPPER__Record_ID__c.field-meta.xml
<CustomField>
    <fullName>AVA_MAPPER__Record_ID__c</fullName>
    <description>The relevant instance of an object involved</description>
    <inlineHelpText>The relevant instance of an object involved</inlineHelpText>
    <label>Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>