force-app/main/default/objects/AVA_MAPPER__AvaTax_Log__c/fields/AVA_MAPPER__Request_Log__c.field-meta.xml
<CustomField>
    <fullName>AVA_MAPPER__Request_Log__c</fullName>
    <description>The request transactional details for the tax call sent to AvaTax</description>
    <inlineHelpText>The request transactional details for the tax call sent to AvaTax</inlineHelpText>
    <label>Request Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>